# PACE2024Exact

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
.github/workflows/: github-actions.yml
experiments/: compile_project.py  res_070524.txt  res_090524.txt  res_100524.txt  res_100524_2.txt  res_130524.txt  res_140524.txt  run_experiments.py
src/: AlignedVector.h  CandidateManager.h  CrossMatrix.h  ExhaustiveSolver.h  Graph.h  GraphGenerator.cpp  GraphGenerator.h  MinCrossMatrix.h  Partitioner.h  Reducer.h  Solver.cpp  Solver.h  Solver_BF.cpp  Solver_BF.h  TranslationTable.h  bit_array.h  candidate_manager.h  cross_matrix.h  definitions.h  domination_reducer.h  edge.cpp  edge.h  exhaustive_solver.h  front_back_reducer.h  graph.h  macros.h  misc.cpp  misc.h  one_vertex_partition_manager.h  one_vertex_partitioner.h  partitioner.h  perfect_pattern.h  reducer.h  solved_vertex_group.h  solver.h  solver_bf.h  translation_table.h  twin_reducer.h  useless_reducer.h
tests/: medium_test.cpp  misc_test.cpp  misc_test.h  own_all_tests.cpp  own_domination_reduction_test.cpp  own_front_back_reduction_test.cpp  own_one_vertex_partition.cpp  own_partition_test.cpp  own_random_test.cpp  own_reduction_twins_test.cpp  own_small_test.cpp  own_solver_test.cpp  own_test.cpp  own_tiny_test.cpp  tiny_test.cpp
utility/: generate_one_vertex_partition.py  generate_partition_test_graphs.py  generate_random_test_graphs.py  generate_reduction_twins_test_graphs.py  generate_test_graphs.py
